tests/paczka1/fuzzy1/21114464.err
Error in line 3: nJ298y2J6E S723 29,6
Error in line 4: nJ298y2J6E S509 68,8
Error in line 1: HHlAc7kQB S52 71,0
Error in line 12: K6liDG9y S509 41,87
Error in line 22: 64t S509 61,1
Error in line 26: cDHoRdf S723 6,7
Error in line 29: 64t S723 95,4
Error in line 27: S52 S509 77,5
Error in line 39: K6liDG9y S52 10,87
